--- a/preview.html
+++ b/preview.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Data Scientist Portfolio</title>
+    <title>Basic Portfolio</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <header>
-        <h1>John Doe - Data Scientist</h1>
+        <h1>Welcome to My Portfolio</h1>
         <nav>
             <ul>
                 <li><a href="#about">About</a></li>
@@ -20,17 +20,15 @@
 
     <section id="about">
         <h2>About Me</h2>
-        <p>A brief introduction about yourself, your skills, and expertise in data science.</p>
+        <p>Welcome to my portfolio! I am a data scientist.</p>
     </section>
 
     <section id="projects">
         <h2>Projects</h2>
         <div class="project">
             <h3>Project Title</h3>
-            <p>Short description of the project.</p>
-            <iframe src="your-dashboard-url" title="Dashboard" width="600" height="400"></iframe>
+            <p>A brief description of the project.</p>
         </div>
-        <!-- Add more project divs as needed -->
     </section>
 
     <section id="contact">
@@ -39,5 +37,7 @@
     </section>
 
     <footer>
-        <p>&copy; 2024 John Doe</p>
+        <p>&copy; 2024 Your Name</p>
     </footer>
+</body>
+</html>
